<resources>
    <string name="app_name">Irongym</string>
    <string name="titulo_configuracion">Configuración</string>
    <string name="cambiar_email">Cambie su nombre de usuario o email</string>
    <string name="hint_nuevo_email">Nuevo email</string>
    <string name="cambiar_contrasena">Cambie su contraseña</string>
    <string name="hint_nueva_contrasena">Nueva contraseña</string>
    <string name="titulo_notificaciones">Notificaciones</string>
    <string name="activar_notificaciones">Activar notificaciones</string>
    <string name="seleccionar_idioma">Seleccione el idioma</string>
    <string name="guardar_cambios">Guardar cambios</string>
    <string name="cerrar_sesion">Cerrar sesión</string>
    <string name="volver">Volver</string>
    <string name="fondo_dieta">Fondo Dieta</string>
    <string name="escanear_alimento">Escanea su alimento</string>
    <string name="guardar_datos">Guardar datos</string>
    <string name="dieta_dia">Dieta día 1</string>
    <string name="dieta_completa">Dieta completa:</string>
    <string name="dia_pecho_hombro_triceps">Día de Pecho-Hombro-Tríceps</string>
    <string name="entrenamiento_completo">Entrenamiento completo:</string>
    <string name="fuerza">Fuerza</string>
    <string name="peso">Peso</string>
    <string name="logros">Logros</string>
    <string name="disciplina">Disciplina</string>
    <string name="altura">Altura</string>
    <string name="resistencia">Resistencia</string>
    <string name="estadisticas_mes">Estadísticas de este mes</string>
    <string name="fondo_login">Fondo del login</string>
    <string name="login_title">Ingresa tus datos</string>
    <string name="hint_usuario_email">Ingresa tu nombre de usuario o email</string>
    <string name="hint_contrasena">Ingresa tu contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="back">Volver</string>
    <string name="asesoramiento_personalizado">Asesoramiento personalizado a su gusto</string>
    <string name="buscar_plan">Buscar plan de entrenamiento o nutrición</string>
    <string name="plan_entrenamiento_encontrado">Plan de entrenamiento encontrado</string>
    <string name="asistente_nutricional_encontrado">Asistente nutricional encontrado</string>
    <string name="ir_al_chat_ai">Ir al Chat de AI</string>
    <string name="modo_desafio">Modo Desafío</string>
    <string name="realizar_desafio">Realizar Desafío</string>
    <string name="notificaciones_recordatorios">Notificaciones/Recordatorios</string>
    <string name="activa_o_desactiva_notificaciones">Activa o Desactiva sus notificaciones</string>
    <string name="nombre_usuario">Nombre del Usuario</string>
    <string name="peso_usuario">Peso: -- kg</string>
    <string name="altura_usuario">Altura: -- cm</string>
    <string name="ingrese_nombre">¿Cuál es su nombre?</string>
    <string name="hint_nombre">Introduzca su nombre completo</string>
    <string name="ingrese_peso">¿Cuánto pesas en kg?</string>
    <string name="hint_peso">Introduzca su peso corporal</string>
    <string name="ingrese_altura">¿Cuánto mides en centímetros?</string>
    <string name="hint_altura">Introduzca su altura</string>
    <string name="actualice_datos">Actualice sus datos.</string>
    <string name="actualizar_datos">Actualizar datos</string>
    <string name="bienvenido_iron_gym">Bienvenido a Iron Gym</string>
    <string name="numero_uno_espana">Nº1 en España</string>
    <string name="descripcion_bienvenida">Continúa para disfrutar de la mejor aplicación de gimnasio actualmente en España.</string>
    <string name="continuar">Continuar</string>
    <string name="titulo_desafio">Desafío</string>
    <string name="descripcion_desafio">Descripción</string>
    <string name="titulo_dia_dieta">Dieta día 1</string>
    <string name="descripcion_dia_dieta">2145 kcal</string>
    <string name="entrenamiento_dia_1">Entrenamiento día 1</string>
    <string name="descripcion_dia">Pecho-Tríceps-Hombro</string>
    <string name="asistente_nutricional">Asistente Nutricional</string>
    <string name="asesoramiento_nutricion">Asesoramiento de nutrición personalizado</string>
    <string name="nombre_comida">Desayuno</string>
    <string name="detalle_comida">4 claras + 2 huevos, 70g de avena...</string>
    <string name="linea_ejercicio">Press banca -> 3 series x 10 reps</string>
    <string name="descripcion_notificacion">Descripción de la notificación</string>
    <string name="plan_entrenamiento">Plan de Entrenamiento</string>
    <string name="asesoramiento_entrenamiento">Asesoramiento de entrenamiento personalizado</string>
    <string name="busqueda_fallida">No se encontraron resultados</string>
    <string name="borrar_conversacion">Borrar Conversación</string>
    <string name="escribe_mensaje">Escribe un mensaje</string>
    <string name="enviar_mensaje">Enviar mensaje</string>

    <string-array name="idiomas_array">
        <item>Español</item>
        <item>Inglés</item>
    </string-array>
</resources>
