<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/red_claro"
    tools:context=".PerfilActivity">


    <ImageView
        android:id="@+id/ivFondoPerfil"
        android:layout_width="0dp"
        android:layout_height="280dp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_launcher_background"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />


    <ImageButton
        android:id="@+id/btnBackPerfil"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_white_background"
        android:src="@drawable/ic_return"
        android:contentDescription="@string/volver"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


    <ImageView
        android:id="@+id/ivAvatar"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:src="@drawable/ic_launcher_foreground"
        android:scaleType="centerCrop"
        android:background="@drawable/rounded_white_background"
        app:layout_constraintTop_toTopOf="@id/ivFondoPerfil"
        app:layout_constraintBottom_toBottomOf="@id/ivFondoPerfil"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="16dp" />

    <LinearLayout
        android:id="@+id/layoutInfoUsuario"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="@id/ivAvatar"
        app:layout_constraintTop_toTopOf="@id/ivAvatar"
        app:layout_constraintStart_toEndOf="@id/ivAvatar"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="12dp"
        android:layout_marginEnd="20dp">


        <TextView
            android:id="@+id/tvNombreUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_usuario"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />


        <TextView
            android:id="@+id/tvPesoUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/peso_usuario"
            android:textColor="@android:color/white" />


        <TextView
            android:id="@+id/tvAlturaUsuario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/altura_usuario"
            android:textColor="@android:color/white" />
    </LinearLayout>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardInputs"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="32dp"
        android:layout_marginHorizontal="16dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="6dp"
        app:layout_constraintTop_toBottomOf="@id/ivFondoPerfil"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="300dp"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingrese_nombre"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:padding="8dp"
                android:hint="@string/hint_nombre"
                android:inputType="textPersonName"
                android:layout_marginBottom="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingrese_peso"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etPeso"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:padding="8dp"
                android:hint="@string/hint_peso"
                android:inputType="numberDecimal"
                android:layout_marginBottom="12dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ingrese_altura"
                android:textColor="@android:color/holo_red_dark"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etAltura"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_altura"
                android:minHeight="48dp"
                android:padding="8dp"
                android:inputType="number"
                android:layout_marginBottom="16dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/actualice_datos"
                android:textColor="@android:color/darker_gray"
                android:layout_marginBottom="16dp" />

            <Button
                android:id="@+id/btnActualizar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/actualizar_datos"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                android:background="@color/red_oscuro" />
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
