<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ConfiguracionActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/toolbar_height"
        android:background="@color/red_oscuro"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/tvTituloConfiguracion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titulo_configuracion"
            android:textColor="@color/white"
            android:textSize="@dimen/text_title"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/margin_medium" />
    </androidx.appcompat.widget.Toolbar>

    <ImageButton
        android:id="@+id/btnBack"
        android:layout_width="@dimen/button_icon_size"
        android:layout_height="@dimen/button_icon_size"
        android:layout_marginTop="@dimen/margin_large"
        android:layout_marginStart="@dimen/margin_medium"
        android:background="@drawable/rounded_white_background"
        android:src="@drawable/ic_return"
        android:contentDescription="@string/volver"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardConfiguracion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardElevation="@dimen/card_elevation"
        app:layout_constraintTop_toBottomOf="@id/btnBack"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding_card">

            <TextView
                android:id="@+id/tvEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cambiar_email"
                android:textSize="@dimen/text_normal"
                android:textColor="@android:color/black"
                android:layout_marginBottom="@dimen/margin_small" />

            <EditText
                android:id="@+id/etNombreUsuario"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:hint="@string/hint_nuevo_email"
                android:layout_marginBottom="@dimen/margin_medium"
                android:inputType="textEmailAddress" />

            <TextView
                android:id="@+id/tvContrasena"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cambiar_contrasena"
                android:textSize="@dimen/text_normal"
                android:textColor="@android:color/black"
                android:layout_marginBottom="@dimen/margin_small" />

            <EditText
                android:id="@+id/etContrasena"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height"
                android:hint="@string/hint_nueva_contrasena"
                android:layout_marginBottom="@dimen/margin_medium"
                android:inputType="textPassword" />

            <TextView
                android:id="@+id/tvNotificaciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/titulo_notificaciones"
                android:textSize="@dimen/text_normal"
                android:textColor="@android:color/black"
                android:layout_marginBottom="@dimen/margin_small" />

            <CheckBox
                android:id="@+id/checkboxNotificaciones"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/activar_notificaciones"
                android:layout_marginBottom="@dimen/margin_medium" />

            <TextView
                android:id="@+id/tvIdioma"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/seleccionar_idioma"
                android:textSize="@dimen/text_normal"
                android:textColor="@android:color/black"
                android:layout_marginBottom="@dimen/margin_small" />

            <Spinner
                android:id="@+id/spinnerIdioma"
                android:layout_width="match_parent"
                android:layout_height="@dimen/input_height" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/guardar_cambios"
        android:textAllCaps="false"
        android:layout_margin="@dimen/margin_medium"
        android:backgroundTint="@color/red_oscuro"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/cardConfiguracion"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/btnCerrarSesion"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/cerrar_sesion"
        android:textAllCaps="false"
        android:layout_margin="@dimen/margin_medium"
        android:backgroundTint="@color/red_oscuro"
        android:textColor="@android:color/white"
        app:layout_constraintTop_toBottomOf="@id/btnGuardar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
