<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotificacionesActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/topBar"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/red_oscuro"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">


        <TextView
            android:id="@+id/tvTituloNotificaciones"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notificaciones_recordatorios"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginTop="16dp" />
    </androidx.appcompat.widget.Toolbar>


    <ImageButton
        android:id="@+id/btnReturn"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:src="@drawable/ic_return"
        android:contentDescription="@string/volver"
        android:background="?android:attr/selectableItemBackground"
        app:layout_constraintTop_toBottomOf="@id/topBar"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />


    <TextView
        android:id="@+id/tvNotificaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/activa_o_desactiva_notificaciones"
        android:textColor="@color/red_claro"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/btnReturn"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp" />


    <androidx.cardview.widget.CardView
        android:id="@+id/cardDias"
        android:layout_width="0dp"
        android:layout_height="400dp"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:cardCornerRadius="24dp"
        app:cardElevation="8dp"
        app:layout_constraintTop_toBottomOf="@id/tvNotificaciones"
        app:layout_constraintBottom_toTopOf="@id/btnGuardar"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvNotificaciones"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="16dp"
            tools:listitem="@layout/item_notificacion" />
    </androidx.cardview.widget.CardView>


    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/guardar_cambios"
        android:textAllCaps="true"
        android:layout_margin="16dp"
        android:backgroundTint="@color/red_oscuro"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
