<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".WelcomeActivity">


    <ImageView
        android:id="@+id/ivBackground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


    <androidx.cardview.widget.CardView
        android:id="@+id/cardContainer"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:radius="30dp"
        app:cardCornerRadius="30dp"
        app:cardElevation="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:padding="24dp"
            android:background="@color/red_claro">


            <TextView
                android:id="@+id/tvWelcome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/bienvenido_iron_gym"
                android:textSize="22sp"
                android:textStyle="bold"
                android:textColor="@android:color/white"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <TextView
                android:id="@+id/tvSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numero_uno_espana"
                android:textSize="16sp"
                android:layout_margin="30dp"
                android:textColor="@android:color/holo_red_dark"
                app:layout_constraintTop_toBottomOf="@id/tvWelcome"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="4dp"/>


            <ImageView
                android:id="@+id/ivProfile"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_margin="30dp"
                android:scaleType="centerCrop"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/tvSubtitle"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>


            <TextView
                android:id="@+id/tvDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="30dp"
                android:text="@string/descripcion_bienvenida"
                android:textSize="14sp"
                android:textColor="@android:color/holo_red_dark"
                android:gravity="center"
                app:layout_constraintTop_toBottomOf="@id/ivProfile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="10dp"/>


            <Button
                android:id="@+id/btnContinue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/continuar"
                android:backgroundTint="@color/red_oscuro"
                android:textColor="@android:color/white"
                android:layout_margin="24dp"
                android:textAllCaps="true"
                app:layout_constraintTop_toBottomOf="@id/tvDescription"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>
